--- a/Render Engine.vcxproj
+++ b/Render Engine.vcxproj
@@ -137,6 +137,7 @@
   <ItemGroup>
     <ClCompile Include="program.cpp" />
     <ClCompile Include="Source Files\Application\Application.cpp" />
+    <ClCompile Include="Source Files\Application\AssetManager.cpp" />
     <ClCompile Include="Source Files\Application\InputManager.cpp" />
     <ClCompile Include="Source Files\Application\Renderer.cpp" />
     <ClCompile Include="Source Files\Application\TimeManager.cpp" />
@@ -156,6 +157,7 @@
     <ClCompile Include="Source Files\imgui\imgui_widgets.cpp" />
     <ClCompile Include="Source Files\Material\Material.cpp" />
     <ClCompile Include="Source Files\Shaders\shader.cpp" />
+    <ClCompile Include="Source Files\World\Drawable\Cube24.cpp" />
     <ClCompile Include="Source Files\World\Drawable\Cube8.cpp" />
     <ClCompile Include="Source Files\World\Drawable\Drawable.cpp" />
     <ClCompile Include="Source Files\World\Drawable\ExternalModel.cpp" />
@@ -169,6 +171,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source Files\Application\Application.h" />
+    <ClInclude Include="Source Files\Application\AssetManager.h" />
     <ClInclude Include="Source Files\Application\InputManager.h" />
     <ClInclude Include="Source Files\Application\Renderer.h" />
     <ClInclude Include="Source Files\Application\TimeManager.h" />
@@ -190,6 +193,7 @@
     <ClInclude Include="Source Files\Material\Material.h" />
     <ClInclude Include="Source Files\Shaders\shader.h" />
     <ClInclude Include="Source Files\Utility\BindingPoints.h" />
+    <ClInclude Include="Source Files\World\Drawable\Cube24.h" />
     <ClInclude Include="Source Files\World\Drawable\Cube8.h" />
     <ClInclude Include="Source Files\World\Drawable\Drawable.h" />
     <ClInclude Include="Source Files\World\Drawable\ExternalModel.h" />
