--- a/Render Engine.vcxproj.filters
+++ b/Render Engine.vcxproj.filters
@@ -127,10 +127,16 @@
     <ClCompile Include="Source Files\imgui\imgui_widgets.cpp">
       <Filter>Source Files\External\imgui</Filter>
     </ClCompile>
-    <ClCompile Include="Source Files\External\glad.c">
+    <ClCompile Include="Source Files\External\stb_image.cpp">
       <Filter>Source Files\External</Filter>
     </ClCompile>
-    <ClCompile Include="Source Files\External\stb_image.cpp">
+    <ClCompile Include="Source Files\World\Drawable\Cube24.cpp">
+      <Filter>Source Files\World\Drawable</Filter>
+    </ClCompile>
+    <ClCompile Include="Source Files\Application\AssetManager.cpp">
+      <Filter>Source Files\Application</Filter>
+    </ClCompile>
+    <ClCompile Include="Source Files\External\glad.c">
       <Filter>Source Files\External</Filter>
     </ClCompile>
   </ItemGroup>
@@ -230,6 +236,12 @@
     </ClInclude>
     <ClInclude Include="Source Files\Utility\BindingPoints.h">
       <Filter>Source Files\Utility</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\World\Drawable\Cube24.h">
+      <Filter>Source Files\World\Drawable</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Files\Application\AssetManager.h">
+      <Filter>Source Files\Application</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
