--- a/Render Engine.vcxproj
+++ b/Render Engine.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="Source Files\imgui\imgui_tables.cpp" />
     <ClCompile Include="Source Files\imgui\imgui_widgets.cpp" />
     <ClCompile Include="Source Files\Material\Material.cpp" />
+    <ClCompile Include="Source Files\Shaders\compute_shader.cpp" />
     <ClCompile Include="Source Files\Shaders\shader.cpp" />
     <ClCompile Include="Source Files\Utility\RandomFunctions.cpp" />
     <ClCompile Include="Source Files\World\Drawable\Cube24.cpp" />
@@ -167,6 +168,7 @@
     <ClCompile Include="Source Files\World\Drawable\PrimitiveModel.cpp" />
     <ClCompile Include="Source Files\World\Drawable\Special\FramebufferQuad.cpp" />
     <ClCompile Include="Source Files\World\Drawable\Special\Portal.cpp" />
+    <ClCompile Include="Source Files\World\Drawable\Special\PostprocessOverlay.cpp" />
     <ClCompile Include="Source Files\World\Drawable\Sphere.cpp" />
     <ClCompile Include="Source Files\World\LightSource.cpp" />
     <ClCompile Include="Source Files\World\Scene.cpp" />
@@ -194,6 +196,7 @@
     <ClInclude Include="Source Files\imgui\imstb_textedit.h" />
     <ClInclude Include="Source Files\imgui\imstb_truetype.h" />
     <ClInclude Include="Source Files\Material\Material.h" />
+    <ClInclude Include="Source Files\Shaders\compute_shader.h" />
     <ClInclude Include="Source Files\Shaders\shader.h" />
     <ClInclude Include="Source Files\Utility\BindingPoints.h" />
     <ClInclude Include="Source Files\Utility\RandomFunctions.h" />
@@ -206,6 +209,7 @@
     <ClInclude Include="Source Files\World\Drawable\PrimitiveModel.h" />
     <ClInclude Include="Source Files\World\Drawable\Special\FramebufferQuad.h" />
     <ClInclude Include="Source Files\World\Drawable\Special\Portal.h" />
+    <ClInclude Include="Source Files\World\Drawable\Special\PostprocessOverlay.h" />
     <ClInclude Include="Source Files\World\Drawable\Sphere.h" />
     <ClInclude Include="Source Files\World\LightSource.h" />
     <ClInclude Include="Source Files\World\Scene.h" />
@@ -217,6 +221,7 @@
     <None Include="Source Files\Shaders\frag.glsl" />
     <None Include="Source Files\Shaders\light_source.frag" />
     <None Include="Source Files\Shaders\light_source.vert" />
+    <None Include="Source Files\Shaders\Postprocess\saturation.glsl" />
     <None Include="Source Files\Shaders\static_colour.frag" />
     <None Include="Source Files\Shaders\static_colour.vert" />
     <None Include="Source Files\Shaders\blinn_phong.frag" />
