--- a/Render Engine.vcxproj.filters
+++ b/Render Engine.vcxproj.filters
@@ -148,9 +148,6 @@
     <ClCompile Include="Source Files\External\glad.c">
       <Filter>Source Files\External</Filter>
     </ClCompile>
-    <ClCompile Include="Source Files\Utility\RandomFunctions.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Source Files\World\Drawable\Special\Portal.cpp">
       <Filter>Source Files\World\Drawable\Special</Filter>
     </ClCompile>
@@ -180,6 +177,9 @@
     </ClCompile>
     <ClCompile Include="Source Files\Utility\Maths\Ray.cpp">
       <Filter>Source Files\Utility\Maths</Filter>
+    </ClCompile>
+    <ClCompile Include="Source Files\Utility\RandomFunctions.cpp">
+      <Filter>Source Files\Utility</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
